Updated API to include an end-point for downloading the source
